# EDD-LCP_Control

./: .gitignore  INSTALL.txt  README.md  Requirements.md  rhel_run_script.sh  run_script.sh
Electrical/Conductivity_Sensor/: Conductivity_Sensor-B_Cu.gbr  Conductivity_Sensor-B_Mask.gbr  Conductivity_Sensor-B_Paste.gbr  Conductivity_Sensor-B_SilkS.gbr  Conductivity_Sensor-Edge_Cuts.gbr  Conductivity_Sensor-F_Cu.gbr  Conductivity_Sensor-F_Mask.gbr  Conductivity_Sensor-F_Paste.gbr  Conductivity_Sensor-F_SilkS.gbr  Conductivity_Sensor-NPTH.drl  Conductivity_Sensor-PTH.drl  Conductivity_Sensor.sch  Conductivity_Sensor.step  Conductivity_Sensor_v2  Conductivity_Sensor_v2-B_Cu.gbr  Conductivity_Sensor_v2-B_Mask.gbr  Conductivity_Sensor_v2-B_Paste.gbr  Conductivity_Sensor_v2-B_SilkS.gbr  Conductivity_Sensor_v2-Edge_Cuts.gbr  Conductivity_Sensor_v2-F_Cu.gbr  Conductivity_Sensor_v2-F_Mask.gbr  Conductivity_Sensor_v2-F_Paste.gbr  Conductivity_Sensor_v2-F_SilkS.gbr  Conductivity_Sensor_v2-NPTH.drl  Conductivity_Sensor_v2-PTH.drl  Conductivity_Sensor_v2.kicad_pcb  Conductivity_Sensor_v2.pro  sym-lib-table
Electrical/Conductivity_Sensor/KiCad Files/: Conductivity_Sensor.kicad_pcb  Conductivity_Sensor.pro  Conductivity_Sensor_v2.pro  Conductivity_Sensor_v2.sch
Electrical/LCP_Battery/9cellBattery/: 18CellBatQuote.sch  9cellBattery.kicad_pcb  9cellBattery.pro  9cellBattery.sch  LCP-18CellAA.sch
Electrical/LCP_Battery/LCP_Battery/: LCP_Battery-B_Cu.gbr  LCP_Battery-B_Mask.gbr  LCP_Battery-B_Paste.gbr  LCP_Battery-B_SilkS.gbr  (+10 more)
Electrical/LCP_Controller/: #auto_saved_files#  ADC_24Bit.kicad_sch  ADC_24Bit.sch  Accelerometer.kicad_sch  Accelerometer.sch  AntennaSwitch.kicad_sch  AntennaSwitch.sch  ArtemisModule.kicad_sch  ArtemisModule.sch  BatteryBackup.sch  COM0_COM1.kicad_sch  COM0_COM1.sch  COM2_COM3.kicad_sch  COM2_COM3.sch  Connectors.kicad_sch  Connectors.sch  ConsoleInput.kicad_sch  ConsoleInput.sch  Crypto.sch  GPS.kicad_sch  GPS.sch  IMU.kicad_sch  IMU.sch  Iridium.kicad_sch  Iridium.sch  LCP_Controller  LCP_Controller-B_Cu.gbr  LCP_Controller-B_Mask.gbr  LCP_Controller-B_Paste.gbr  LCP_Controller-B_SilkS.gbr  LCP_Controller-Edge_Cuts.gbr  LCP_Controller-F_Cu.gbr  LCP_Controller-F_Mask.gbr  LCP_Controller-F_Paste.gbr  LCP_Controller-F_SilkS.gbr  LCP_Controller-In1_Cu.gbr  LCP_Controller-In2_Cu.gbr  LCP_Controller-NPTH.drl  LCP_Controller-PTH.drl  LCP_Controller.kicad_pcb  (+37 more)
Firmware/LCP_Control/: .cproject  .project  CMakeLists.txt  LCP_Control.ewd  LCP_Control.ewp  LCP_Control.ewt  Makefile  Makefile_bak  README.txt  arm-gcc-toolchain.cmake  main.c  project.yml
Firmware/LCP_Control/TraceRecorder/config/: trcConfig.h  trcKernelPortConfig.h
Firmware/LCP_Control/iar/: freertos_lowpower.custom_argvars  freertos_lowpower.dep  freertos_lowpower.ewd  freertos_lowpower.ewp  freertos_lowpower.ewt  freertos_lowpower.eww
Firmware/LCP_Control/iar/settings/: freertos_lowpower.Debug.cspy.bat  freertos_lowpower.Debug.cspy.ps1  freertos_lowpower.Debug.driver.xcl  freertos_lowpower.Debug.general.xcl  freertos_lowpower.dbgdt  freertos_lowpower.dnx  freertos_lowpower.wsdt
Firmware/LCP_Control/include/: GPS.h  K9lx_pressure.h  LED.h  MAX14830.h  S9_temperature.h  buffer_c.h  buffer_u32.h  config.h  dataframe.h  datalogger.h  depth.h  flash.h  freertos_lowpower.h  i9603n.h  isbd_at_cmd.h  main.h  piston.h  temperature.h  ublox.h  ublox_ubx.h
Firmware/LCP_Control/include/RTOS/: FreeRTOSConfig.h  rtos.h
Firmware/LCP_Control/include/app/: StateMachine.h  control.h  data.h  memory.h  sensors.h
Firmware/LCP_Control/include/artemis/: artemis_accel.h  artemis_debug.h  artemis_flash.h  artemis_i2c.h  artemis_i9603n.h  artemis_iom.h  artemis_max14830.h  artemis_pa9ld.h  artemis_piston.h  artemis_rtc.h  artemis_spi.h  artemis_spi_old.h  artemis_supercap.h  artemis_uart.h  artemis_ublox_i2c.h
Firmware/LCP_Control/include/bsp/: am_bsp.h  am_bsp_pins.h  bsp_uart.h
Firmware/LCP_Control/include/sys/: sysinfo.h
Firmware/LCP_Control/linker/: lcpcontrol_lowpower.ld  lcpcontrol_lowpower_asb.ld  lcpcontrol_lowpower_svl.ld
Firmware/LCP_Control/src/: GPS.c  GPS.h  K9lx_pressure.c  Keller_9LD.c  Keller_9LD.h  LED.c  LED.h  MAX14830.c  MAX14830.h  S9_temp.c  S9_temp.h  S9_temperature.c  buffer_c.c  buffer_c.h  buffer_u32.c  buffer_u32.h  dataframe.c  dataframe.h  datalogger.c  depth.c  depth.h  flash.c  freertos_lowpower.c  i9603n.c  i9603n.h  isbd_at_cmd.c  isbd_at_cmd.h  main.c  main.h  new_piston.c  piston.c  piston.h  temperature.c  temperature.h  ublox.c  ublox.h  ublox_ubx.c  ublox_ubx.h
Firmware/LCP_Control/src/RTOS/: FreeRTOSConfig.h  rtos.c
Firmware/LCP_Control/src/TraceRecorder/config/: trcConfig.h  trcKernelPortConfig.h
Firmware/LCP_Control/src/app/: StateMachine.c  StateMachine.h  control.c  control.h  data.c  data.h  memory.c  sensors.c  sensors.h  sensors_test.c
Firmware/LCP_Control/src/artemis/: artemis_accel.c  artemis_debug.c  artemis_debug.h  artemis_flash.c  artemis_i2c.c  artemis_i9603n.c  artemis_i9603n.h  artemis_iom.c  artemis_iom.h  artemis_k9lx.c.backup  artemis_max14830.c  artemis_max14830.c.backup  artemis_max14830.h  artemis_mcu.c  artemis_mcu.h  artemis_pa9ld.c  artemis_pa9ld.h  artemis_piston.c  artemis_piston.h  artemis_rtc.c  artemis_spi.c  artemis_spi.h  artemis_spi_old.c  artemis_stream.c  artemis_stream.h  artemis_supercap.c  artemis_time.c  artemis_time.h  artemis_uart.c  artemis_uart.h  artemis_ublox_i2c.c  artemis_ublox_i2c.h
Firmware/LCP_Control/src/bsp/: CMakeLists.txt  Makefile  am_bsp.c  am_bsp.h  am_bsp_pins.c  am_bsp_pins.h  bsp_pins.src  bsp_uart.c  bsp_uart.h
Firmware/LCP_Control/src/sys/: config.h  sysinfo.c  sysinfo.h
Firmware/LCP_Control/test/: test_Keller_9LD.c  test_S9_temp.c  test_dataframe.c
Firmware/LCP_Control/tools/: gen_pins.sh
Firmware/LCP_Control/tools/configuration/: boards.sh
Firmware/LCP_Control/tools/gps/: gps_i2c.py
Firmware/Manuals/: LCP_Controlboard_User_Manual.docx
Firmware/tools/: boards.sh
LCP_sbd_decoder/: README.txt  lcpdecoder  lcpdecoder.c
LCP_sbd_decoder/pysbd-decoder/: README.txt  pysbd-decoder.py
(+122 files in other folders)
